non-msrv-tests/tests/ui/not-zeroize/trait.stderr
error: unsupported trait, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd
 --> tests/ui/not-zeroize/trait.rs:2:16
  |
2 | #[derive_where(T)]
  |                ^
